2008-03-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add bindings for g_get_system_*_dirs

	* vala/valacodecontext.vala: use g_get_system_data_dirs to find
	  VAPI files, should make valac relocatable on Windows

2008-03-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add dir separator bindings,
	  fix g_regex_escape_string binding

	* compiler/valacompiler.vala: port realpath to Windows,
	  fixes bug 515210

2008-03-02  Jürg Billeter  <j@bitron.ch>

	* configure.ac, gen-project/Makefile.am, gen-project/licenses/:
	  distribute licenses to be used by vala-gen-project

	* gen-project/valaprojectgenerator.vala: add GPL3 and LGPL3, copy
	  license from $(pkgdatadir)/licenses or /usr/share/common-licenses/
	  instead of automake or libtool to ensure we copy the right version,
	  based on patch by Andreas Brauchli

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix using interface methods as
	  delegates, fixes bug 518109

	* tests/delegates.vala: test interface methods as delegates

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorclass.vala: don't register private
	  properties with GObject property system, fixes bug 519201

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/hildon-fm-2.deps, vapi/hildon-fm-2.vapi,
	  vapi/packages/hildon-fm-2/: add hildon-fm-2 bindings,
	  based on patch by Levi Bard, fixes bug 511092

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support cheader_filename metadata
	  attribute for delegates

2008-03-01  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi, vapi/gconf-2.0.vapi, vapi/gdk-2.0.vapi,
	  vapi/gdk-pixbuf-2.0.vapi, vapi/gnet-2.0.vapi, vapi/gnome-vfs-2.0.vapi,
	  vapi/gstreamer-0.10.vapi, vapi/gstreamer-audio-0.10.vapi,
	  vapi/gstreamer-base-0.10.vapi, vapi/gstreamer-controller-0.10.vapi,
	  vapi/gstreamer-dataprotocol-0.10.vapi,